--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.4.0",
+    "headers": "^0.9.6",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "stripe": "^11.6.0",
